2013-07-15  Corinna Vinschen  <corinna@vinschen.de>

	Remove /dev/mem, /dev/kmem, /dev/port support.
	* Makefile.in (DLL_OFILES): Drop fhandler_mem.o.
	(fhandler_mem_CFLAGS): Remove rule.
	* devices.in (enum fh_devices): Remove FH_MEM, FH_KMEM and FH_PORT.
	* devices.cc: Regenerate.
	* dtable.cc (fh_alloc): Drop handling for FH_MEM, FH_KMEM and FH_PORT.
	* fhandler.h (class fhandler_dev_mem): Remove.
	* fhandler_mem.cc: Remove file.
	* globals.cc (ro_u_pmem): Remove.
	* mmap.cc (fhandler_dev_mem::mmap): Remove.
	(fhandler_dev_mem::munmap): Remove.
	(fhandler_dev_mem::fixup_mmap_after_fork): Remove.

2013-07-15  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 22.

2013-07-15  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_native): Fix common prefix search.  Enhance comment.

2013-07-11  Corinna Vinschen  <corinna@vinschen.de>

	* uname.cc (uname): Drop unused code.

2013-07-10  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* gentlsoffsets: Clean up a little.

	* thread.cc (semaphore::_fixup_after_fork): Report on potential problem
	parameter.  Make sure that currentvalue is never zero.
	(semaphore::init): Make cosmetic change.

2013-07-10  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.sc.in (.text.*): Fold into .text on all platforms.
	(.eh_frame): Add section.
	* environ.cc (my_findenv): Drop __stdcall attribute.
	(getearly): Ditto.
	(findenv_func): Drop cast.

2013-07-03  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* fhandler.cc (fhandler_base::close_with_arch): Make sure that the
	archetype is deleted when close_with_arch is referenced *via* the
	archetype.

2013-06-28  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (find_fast_cwd_pointer): Use gas syntax for assembler
	description in all comments.  Make algorithm work on Windows 8.1
	Preview.

2013-06-27  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (child_info_fork::alloc_stack): Fix a comparison to avoid