@@ -1,3 +1,8 @@
+2013-07-17  Christopher Faylor  <me.cygwin2013@cgf.cx>
+
+	* winsup.h (cygbench): Fix declaration to match definition.
+	* dcrt0.cc (initial_env): Remove unused variable.
+
 2013-07-15  Corinna Vinschen  <corinna@vinschen.de>
 
 	Remove /dev/mem, /dev/kmem, /dev/port support.
